--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,10 +9,22 @@ on:
 jobs:
 
   build:
-
     runs-on: [self-hosted]
-
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+
+  login:
+    runs-on: [self-hosted]
+    steps:
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: 'Build Image'
+      run: |
+        docker build . --tag ghcr.io/68656c6c/caddy-cloudflare:latest
+        docker push ghcr.io/68656c6c/caddy-cloudflare:latest
