--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: [self-hosted]
     steps:
@@ -17,6 +16,11 @@ jobs:
 
   login:
     runs-on: [self-hosted]
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
     steps:
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v3
